<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="lab.csci4100u.jocstech.lab3_project.MainActivity">

    <ImageView
        android:id="@+id/imgViewHome"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/imgContent"
        android:src="@drawable/an" />


    <TextView
        android:id="@+id/textViewHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgViewHome"
        android:text="@string/textHome" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_below="@id/textViewHome">

        <Button
            android:id="@+id/btnHomeAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_below="@id/textViewHome"
            android:onClick="btnHomeAboutClicked"
            android:padding="20dp"
            android:text="@string/btnAbout"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnHomeLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_below="@id/btnHomeAbout"
            android:onClick="btnHomeLoginClicked"
            android:padding="20dp"
            android:text="@string/btnLogin"
            android:textSize="25sp" />

    </LinearLayout>

</RelativeLayout>
