<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="lab.csci4100u.jocstech.lab3_project.MainActivity">

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/colorBlack"
        android:text="@string/textLogin" />

    <LinearLayout
        android:id="@+id/linearLayoutLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewLogin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewLogin1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:textSize="25sp"
            android:textColor="@color/colorBlack"
            android:layout_marginLeft="28dp"
            android:text="@string/username"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25sp"
            android:soundEffectsEnabled="true"
            android:inputType="numberDecimal"
            android:hint="@string/username"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutLogin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:textSize="25sp"
            android:textColor="@color/colorBlack"
            android:layout_marginLeft="28dp"
            android:text="@string/password"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25sp"
            android:soundEffectsEnabled="true"
            android:hint="@string/password"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <Button
        android:id="@+id/btnLoginLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutPassword"
        android:padding="20dp"
        android:textSize="25sp"
        android:layout_margin="30dp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorBlack"
        android:text="@string/btnLogin"
        android:onClick="btnLoginLoginClicked" />


</RelativeLayout>
